# presage-contracts

./: .gitignore  Cargo.toml  Readme.md
contracts/presage/: Cargo.toml
contracts/presage/src/: compat.rs  contract.rs  error.rs  lib.rs  msg.rs  oracle.rs  state.rs
