[workspace]
members = [
    "contracts/*",
]
edition = "2021"

[workspace.dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw20 = "1.1.2"
sha2 = { version = "0.10.8", features = ["oid"] }
tiny-keccak = { version = "2", features = ["keccak"] }
serde_json = "1.0.87"
ripemd = "0.1.3"
bech32 = "0.9.1"
base64 = "0.21.4"
phf = { version = "0.11.2", features = ["macros"] }
rsa = { version = "0.9.2" }
getrandom = { version = "0.2.10", features = ["custom"] }
p256 = { version = "0.13.2", features = ["ecdsa-core", "arithmetic", "serde"] }
cosmos-sdk-proto = { package = "xion-cosmos-sdk-proto", version = "0.26.1", default-features = false, features = ["std", "cosmwasm", "xion", "serde"] }
url = "2.5.2"
osmosis-std = "0.25.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.4"
pyth-sdk-cw = "1.2.0"
wasm = "0.0.0"
